force-app/main/default/objects/JMS_Trigger_Manager__c/JMS_Trigger_Manager__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>JMS Trigger Manager</label>
</CustomObject>