force-app/main/default/objects/JMS_Trigger_Manager__c/fields/JMS_Disabled_Objects__c.field-meta.xml
<CustomField>
    <fullName>JMS_Disabled_Objects__c</fullName>
    <label>Disabled Objects</label>
    <type>TextArea</type>
</CustomField>