force-app/main/default/objects/JMS_Trigger_Manager__c/fields/JMS_Mute_All_Triggers__c.field-meta.xml
<CustomField>
    <fullName>JMS_Mute_All_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mute All Triggers</label>
    <type>Checkbox</type>
</CustomField>