force-app/main/default/objects/JMS_Trigger_Manager__c/fields/JMS_Mute_All_Validations__c.field-meta.xml
<CustomField>
    <fullName>JMS_Mute_All_Validations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used for muting validation rules.</description>
    <label>Mute All Validations</label>
    <type>Checkbox</type>
</CustomField>